feat: init site

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,5 @@
 {
-    "name": "jekyll",
-    "image":"jekyll/builder",
-    "appPort":[
-        4000
-    ]
+  "name": "jekyll",
+  "image": "jekyll/builder",
+  "appPort": [4000]
 }
