--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,24 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
 url: ""
 baseurl: ""
-repository: fatalc/fatalc.github.io
+title: ""
+repository: cnfatal/cnfatal.github.io
+avatar: https://avatars.githubusercontent.com/u/15731850
 collections_dir: contents
-collections:
-  golang:
-    output: true
-    permalink: /:collection/:path
+defaults:
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: page
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
