--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 #
 url: ""
 baseurl: ""
+gtag: G-0CRY7DBFY7
 title: ""
 repository: cnfatal/cnfatal.github.io
 avatar: https://avatars.githubusercontent.com/u/15731850
