perf: enable sitemap

--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
-url: ""
+url: "https://blog.fatalc.cn"
 baseurl: ""
 gtag: G-0CRY7DBFY7
 title: ""
 repository: cnfatal/cnfatal.github.io
 avatar: https://avatars.githubusercontent.com/u/15731850
 collections_dir: contents
+plugins:
+  - jekyll-sitemap
 defaults:
   - scope:
       path: ""
