--- a/_config.yml
+++ b/_config.yml
@@ -12,23 +12,13 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
-url: "https://blog.fatalc.cn"
-baseurl: ""
 gtag: G-0CRY7DBFY7
 title: ""
-repository: cnfatal/cnfatal.github.io
-avatar: https://avatars.githubusercontent.com/u/15731850
 collections_dir: contents
+permalink: none
 plugins:
   - jekyll-sitemap
-defaults:
-  - scope:
-      path: ""
-      type: pages
-    values:
-      layout: page
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: post
+  - jekyll-mentions
+  - jekyll-feed
+  - jekyll-avatar
+  - jemoji
